chore(): add lockbox

--- a/.env.development
+++ b/.env.development
@@ -10,6 +10,7 @@ WEB_CONCURRENCY=1
 DB_HOST=127.0.0.1
 DB_PORT=COMMAND_EXPAND(make services-port SERVICE=postgresql PORT=5432)
 DB_USER=postgres
+LOCKBOX_MASTER_KEY=
 
 APPLICATION_HOST=localhost:3000
 REDIS_HOST=127.0.0.1
