feat(): update env

--- a/.env.development
+++ b/.env.development
@@ -17,3 +17,9 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=COMMAND_EXPAND(make services-port SERVICE=redis PORT=6379)
 REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/1
 DEVISE_SECRET_KEY=
+
+SMTP_ADDRESS=yoursmtpserver.com
+SMTP_PORT=587
+SMTP_EMAIL=yourdomain.com
+SMTP_USERNAME=yourusername
+SMTP_PASSWORD=yourpassword
